[package]
name = "piixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0" , features = ["tokio", "system"] }
iced_native = "0.10.3"
image = "0.24.6"
rand = "0.8.5"
rayon = "1.7.0"
time = { version = "0.3.5", features = ["local-offset", "std"] }
v4l = "0.14.0"
wide = "0.7.11"
